--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <section>
+    <article>
+      <div class="card">
+        <div class="img_container">
+          <img src="assets/images/avatar-jessica.jpeg" alt="avatar-jessica">
+        </div>
+        <div class="text_container">
+          <h1 class="name">Jessica Randall</h1>
+          <p class="location">London, United Kingdom</p>
+          <p class="paragraph">"Front-end developer and avid reader"</p>
+        </div>
+        <div class="options">
+          <button>Github</button>
+          <button>Frontend Mentor</button>
+          <button>Linkedin</button>
+          <button>Twitter</button>
+          <button>Instagram</button>
+        </div>
+      </div>
+    </article>
+  </section>
 </body>
 </html>
